# MicroPython_SHTC3

./: LICENSE  README.rst  examples.json  package.json  pyproject.toml
docs/: api.rst  conf.py  examples.rst  index.rst
docs/_static/: favicon.ico.license
examples/: shtc3_power_mode.py  shtc3_simpletest.py
micropython_shtc3/: i2c_helpers.py  shtc3.py
